stateDiagram-v2
    [*] --> OPEN : Task created

    OPEN --> IN_PROGRESS : assign
    OPEN --> BLOCKED : block

    IN_PROGRESS --> REVIEW : submit for review
    IN_PROGRESS --> BLOCKED : block

    REVIEW --> DONE : approve
    REVIEW --> IN_PROGRESS : reject / request changes

    BLOCKED --> OPEN : unblock

    DONE --> [*]

    note right of DONE
        Final state:
        Task is complete
    end note

    note left of BLOCKED
        Blocked tasks can
        only return to OPEN
    end note
